# Renderer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build-all.bat  cmake-variants.yaml
src/: Basepch.hpp  main.cpp
src/Core/: Assert.hpp  Base.hpp  Basepch.hpp  Buffers.hpp  PlatformDetection.hpp  Timer.h
src/Core/Logging/: Log.cpp  Log.hpp
src/Core/Renderer/: Buffer.hpp  RendererApi.hpp  Shader.hpp  ShaderData.hpp  VertexArray.hpp
src/Core/Sample/: core.hpp  sample_shader.cpp  sample_shader.h
src/Logging/: Log.cpp  Log.h  Log.hpp
src/Platform/OpenGL/: CMakeLists.txt  OpenGLBuffers.cpp  OpenGLBuffers.hpp  OpenGLDebug.hpp  OpenGLEntityRenderObject.hpp  OpenGLRenderApi.cpp  OpenGLRenderApi.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTypeMapping.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
src/Platform/PlatformProvider/: PlatformRendererApi.cpp  PlatformShader.cpp
src/core/: base.hpp  buffers.hpp
src/core/Sample/: core.hpp
src/core/renderer/: buffer.hpp  renderer_api.cpp  renderer_api.hpp  shader.cpp  shader.hpp  shader_data.hpp  vertex_array.hpp
